docs-kits_versioned_docs/version-24.08/kits/product-carbon-footprint-exchange-kit/changelog.md
---
id: changelog
title: Changelog
description: PCF Exchange KIT
sidebar_position: 1
---

![PCF Exchange kit banner](/img/kit-icons/pcf-kit-icon.svg)

## PCF Exchange KIT

All notable changes to this Kit will be documented in this file.

## [1.2.0] - 2024-08-01

### Added

#### Adoption View

* References to available PCF exchange solutions (moved from CX-0136 PCF Use Case standard)
* Comprehensive illustration of latest PCF data model (overview plus details)

#### Development View

* Specification for bilateral contracts

### Changed

#### Adoption View

* Exemplary PCF data model payload to PCF data model version 7.0.0 (Rel. 24.08)
* References to relevant standards in their latest versions (Rel. 24.08)
* Several typos and link errors
* Reference to Framework Agreement

#### Development View

* PCF Exchange API to Rel. 24.08 (e.g. data format)
* Several illustrations to reflect latest changes in Rel. 24.08
* Policy adapted to latest standards (incl. new Framework Agreement and bilateral contracts)
* Referenced standard updated

### Removed

#### Development View

* Inlined Open-API (MDX) removed

## [1.1.0] - 2024-05-17

### Added

* Simple Data Exchanger (SDE) as available open-source reference implementation

### Changed

* DT submodel structure updated
* EDC asset structure updated
* Policy structure updated
* Sample data updated
* Minor bugfixes
* Changed banner image file location and converted .png image to .svg

### Removed

* Deprecated EDC asset attributes removed

## [1.0.0] - 2024-03-08

### Added

* Flow description in case no material twin or PCF submodel exists
* Versions of referenced standards

### Changed

* Open API updated to version 1.0.0 (Rel.24.03)
* Asset and Policy definitions updated
* Link to Framework Agreement updated
* Minor bugs fixed

### Removed

N/A

## [0.1.0] - 2023-08-23

### Added

Initial Version of the PCF exchange KIT including adoption and development view incl. all relevant API specifications.

### Changed

N/A

### Removed

N/A
