docs-kits_versioned_docs/version-25.09/kits/product-carbon-footprint-exchange-kit/changelog.md
---
id: changelog
title: Changelog
description: PCF Exchange KIT
sidebar_position: 1
---

import Kit3DLogo from '@site/src/components/2.0/Kit3DLogo';

<Kit3DLogo kitId="pcf" />

## PCF Exchange KIT

All notable changes to this Kit will be documented in this file.

## [1.3.0] - 2025-09-29

### Added

- Synchronous data exchange via data pull and digital twins according to industry core standard/kit
- Add customerPartID in data model

## [1.2.2] - 2025-08-25

### Changed

#### Adoption View

- Replaced the entire data model table with a new version and linked to the downloadable Excel sheet
- adapted list of reference implementations to reflect certified solutions from expert group members
- Rephrased outdated assumptions and verification statements in the Premises, Customer Journey, and Business Architecture sections

#### Development View

- Removed version v1.0.0 from policy examples, added tutorial links and a note about the upcoming CX-152 standard
- Extended Architecture Picture, Sequence Diagram and API call to reflect synchronous PCF exchange in addition
- Replaced the outdated architecture diagram in the Building Block View

#### Overall

- Reviewed and updated outdated links,

## [1.2.1] - 2025-02-07

- Fix broken links and spelling mistakes

## [1.2.0] - 2024-08-01

### Added

#### Adoption View

- References to available PCF exchange solutions (moved from CX-0136 PCF Use Case standard)
- Comprehensive illustration of latest PCF data model (overview plus details)

#### Development View

- Specification for bilateral contracts

### Changed

#### Adoption View

- Exemplary PCF data model payload to PCF data model version 7.0.0 (Rel. 24.08)
- References to relevant standards in their latest versions (Rel. 24.08)
- Several typos and link errors
- Reference to Framework Agreement

#### Development View

- PCF Exchange API to Rel. 24.08 (e.g. data format)
- Several illustrations to reflect latest changes in Rel. 24.08
- Policy adapted to latest standards (incl. new Framework Agreement and bilateral contracts)
- Referenced standard updated

### Removed

#### Development View

- Inlined Open-API (MDX) removed

## [1.1.0] - 2024-05-17

### Added

- Simple Data Exchanger (SDE) as available open-source reference implementation

### Changed

- DT submodel structure updated
- EDC asset structure updated
- Policy structure updated
- Sample data updated
- Minor bugfixes
- Changed banner image file location and converted .png image to .svg

### Removed

- Deprecated EDC asset attributes removed

## [1.0.0] - 2024-03-08

### Added

- Flow description in case no material twin or PCF submodel exists
- Versions of referenced standards

### Changed

- Open API updated to version 1.0.0 (Rel.24.03)
- Asset and Policy definitions updated
- Link to Framework Agreement updated
- Minor bugs fixed

### Removed

N/A

## [0.1.0] - 2023-08-23

### Added

Initial Version of the PCF exchange KIT including adoption and development view incl. all relevant API specifications.

### Changed

N/A

### Removed

N/A
